--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-   "name":"APPNAME",
-   "description":"DESCRIPTIONHERE",
+   "name":"fixnode",
+   "description":"Fixes a bunch of shitty problems",
    "version":"0.0.1",
-   "homepage":"http://github.com/wearefractal/APPNAME",
-   "repository":"git://github.com/wearefractal/APPNAME.git",
+   "homepage":"http://github.com/wearefractal/fixnode",
+   "repository":"git://github.com/wearefractal/fixnode.git",
    "author":"Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
    "main":"./index.js",
    
-   "dependencies":{
-      "coffee-script":"*"
-   },
-   "devDependencies":{
-      "mocha":"*",
-      "should":"*"
-   },
-   "scripts":{
-      "test":"mocha --compilers coffee:coffee-script"
-   },
    "engines":{
       "node":">= 0.4.0"
    },
    "licenses":[
       {
          "type":"MIT",
-         "url":"http://github.com/wearefractal/APPNAME/raw/master/LICENSE"
+         "url":"http://github.com/wearefractal/fixnode/raw/master/LICENSE"
       }
    ]
 }
